self-hosted-services/klipper/klipper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klipper
  namespace: klipper
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: klipper
      app.kubernetes.io/component: core
  template:
    metadata:
      labels:
        app.kubernetes.io/name: klipper
        app.kubernetes.io/component: core
    spec:
      nodeSelector:
        kubernetes.io/hostname: crobceratops
      volumes:
        - name: klipper-pvc
          persistentVolumeClaim:
            claimName: klipper-pvc
        - name: klipper-config
          configMap:
            name: klipper-config
        - name: ttyacm0
          hostPath:
            path: /dev/serial/by-id/usb-marlinfw.org_Marlin_USB_Device_0800D001AF48A4E55D37A3EBF50020C4-if00
      containers:
        - name: klipper
          # renovate: datasource=docker depname=dimalo/klipper-moonraker versioning=semver
          image: dimalo/klipper-moonraker:latest
          securityContext:
            privileged: true
          ports:
            - containerPort: 7125
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - mountPath: /home/klippy/printer_data
              name: klipper-pvc
            - mountPath: /home/klippy/printer_data/config/printer.cfg
              name: klipper-config
              subPath: klipper.cfg
            - mountPath: /home/klippy/printer_data/config/moonraker.conf
              name: klipper-config
              subPath: moonraker.conf
            - mountPath: /home/klippy/.config/printer.cfg
              name: klipper-config
              subPath: klipper.cfg
            - mountPath: /home/klippy/.config/moonraker.conf
              name: klipper-config
              subPath: moonraker.conf
            - mountPath: /dev/ttyACM0
              name: ttyacm0
