self-hosted-services/klipper/mainsail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainsail
  namespace: klipper
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mainsail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mainsail
    spec:
      containers:
        - name: mainsail
          # renovate: datasource=docker depname=ghcr.io/mainsail-crew/mainsail versioning=semver
          image: ghcr.io/mainsail-crew/mainsail:v2.16.0
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
