self-hosted-services/klipper/moonraker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moonraker
  namespace: klipper
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: moonraker
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: moonraker
        app.kubernetes.io/component: api
    spec:
      volumes:
        - name: klipper-pvc
          persistentVolumeClaim:
            claimName: klipper-pvc
        - name: klipper-config
          configMap:
            name: klipper-config
      containers:
        - name: moonraker
          # renovate: datasource=docker depname=mkuf/moonraker versioning=semver
          image: mkuf/moonraker:latest
          ports:
            - containerPort: 7125
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /opt/printer_data
              name: klipper-pvc
            - mountPath: /opt/printer_data/config/moonraker.conf
              name: klipper-config
              subPath: moonraker.conf
