self-hosted-services/klipper/firmware-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firmware-service
  namespace: klipper
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: firmware-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
