self-hosted-services/klipper/klipper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klipper-service
  namespace: klipper
spec:
  ports:
    - port: 7125
      targetPort: 7125
      name: http
  selector:
    app.kubernetes.io/name: klipper
    app.kubernetes.io/component: core
