self-hosted-services/klipper/mainsail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainsail-service
  namespace: klipper
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mainsail
  ports:
    - name: http
      port: 80
      targetPort: 8080
